--- a/aula12ex/ex015/estilo.css
+++ b/aula12ex/ex015/estilo.css
@@ -17,6 +17,12 @@ section{
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.43);   
 }
 
+img#foto{
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+}
+
 footer{
     color: white;
     text-align: center;
